<resources>
    <string name="app_name">Lab3-Views</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="checkbox1">First Option</string>
    <string name="checkbox2">Second Option</string>
    <string name="radio1">RadioButton1</string>
    <string name="radio2">RadioButton2</string>
    <string-array name="spinner1">
        <item>SKILL</item>
        <item>MUTANT</item>
        <item>TECH</item>
        <item>COSMIC</item>
        <item>MYSTIC</item>
        <item>SCIENCE</item>
    </string-array>
    <string name="Marvel">Though the concept of a shared universe was not new or unique to comics in 1961,
        writer/editor Stan Lee, together with several artists including Jack Kirby and Steve Ditko,
        created a series of titles where events in one book would have repercussions in another title
        and serialized stories would show characters growth and change. Headline characters in one
        title would make cameo or guest appearances in other books. Eventually many of the leading
        heroes assembled into a team known as the Avengers. This was not the first time that Marvels
        characters had interacted with one another—Namor the Sub-Mariner and the Original Human Torch
        had been rivals when Marvel was Timely comics (Marvel Vault)—but it was the first time that
        the comic book publishers characters seemed to share a world. The Marvel Universe was also
        notable for setting its central titles in New York City; by contrast, many DC heroes live in
        fictional cities. Care was taken to portray the city and the world as realistically as possible
        with the presence of superhumans affecting the common citizens in various ways.</string>
</resources>
